--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,5 +47,5 @@ jobs:
 
       - name: Deploy to AKS using Helm
         run: |
-          helm upgrade --install myapp ./helm/myapp --set image.repository=${{ secrets.ACR_LOGIN_SERVER }}/helmdemo --set image.tag=latest1
+          helm upgrade --install myappdemo ./helm/myappdemo --set image.repository=${{ secrets.ACR_LOGIN_SERVER }}/helmdemo --set image.tag=latest1
 
