--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,10 +42,10 @@ jobs:
 
       - name: Get AKS credentials
         run: |
-          az aks get-credentials --resource-group vaultdemo-resource-group  --name vaultdemo-cluster-1
+          az aks get-credentials --resource-group demovault-resource-group  --name demovault-cluster-1
           
       #Re-deploy
       - name: Deploy to AKS using Helm
         run: |
-          helm upgrade --install myvaultdemo ./helm/myvaultdemo --set image.repository=${{ secrets.ACR_LOGIN_SERVER }}/vaultdemo --set image.tag=latest1
+          helm upgrade --install mydemovault ./helm/mydemovault --set image.repository=${{ secrets.ACR_LOGIN_SERVER }}/demovault --set image.tag=latest1
 
