--- a/helm/testvaultapp/templates/deployment.yaml
+++ b/helm/testvaultapp/templates/deployment.yaml
@@ -1,19 +1,56 @@
+#apiVersion: apps/v1
+#kind: Deployment
+#metadata:
+#  name: {{ .Chart.Name }}
+#spec:
+#  replicas: 1
+#  selector:
+#    matchLabels:
+#      app: {{ .Chart.Name }}
+#  template:
+#    metadata:
+#      labels:
+#        app: {{ .Chart.Name }}
+#    spec:
+#      containers:
+#        - name: {{ .Chart.Name }}
+#          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+#          ports:
+#            - containerPort: 8080
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Chart.Name }}
+  name: testvaultapp
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: {{ .Chart.Name }}
+      app: testvaultapp
   template:
     metadata:
       labels:
-        app: {{ .Chart.Name }}
+        app: testvaultapp
     spec:
       containers:
-        - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+        - name: testvaultapp
+          image: terafromdemoregistry.azurecr.io/testvaultapp:latest2
           ports:
             - containerPort: 8080
+          env:
+            - name: testkey
+              valueFrom:
+                secretKeyRef:
+                  name: azure-secrets
+                  key: testkey
+          volumeMounts:
+            - name: secrets-store-inline
+              mountPath: "/mnt/secrets-store"
+              readOnly: true
+      volumes:
+        - name: secrets-store-inline
+          csi:
+            driver: secrets-store.csi.k8s.io
+            readOnly: true
+            volumeAttributes:
+              secretProviderClass: "azure-kvname"
